2009-11-25  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerSession.cs: Fix potential null ref.

2009-11-24  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerSession.cs:
	* SoftDebuggerBacktrace.cs: Mark frames that are external
	  code.

2009-11-24  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerBacktrace.cs: Include the type name in the
	  method name. Fixes bug #556941.

2009-11-24  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerEngine.cs:
	* SoftDebuggerSession.cs: Add support for tracepoints and
	  conditional breakpoints.

2009-11-24  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerAdaptor.cs: Track API.
	* Mono.Debugger.Soft.dll: Updated.

2009-11-24  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerSession.cs: The stepping request should always
	  be disabled when stopping for whatever reason.

2009-11-23  Michael Hutchinson  <mhutchinson@novell.com>

	* Manifest.addin.xml: Declare dep on Mono.Debugger.Soft.dll.

2009-11-20  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.Debugger.Soft.dll: Updated.

	* Makefile.am:
	* MonoDevelop.Debugger.Soft.csproj: Ref Cecil.

	* SoftDebuggerEngine.cs:
	* SoftDebuggerSession.cs:
	* RemoteSoftDebuggerSession.cs: Implement support for assembly
	  filters.

2009-11-20  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerEngine.cs: Implement ID member.

2009-11-19  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerAdaptor.cs: In GetMember, look for members in
	  parent types.

2009-11-19  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerSession.cs: Fix disposing code.

2009-11-19  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerAdaptor.cs: Properly implement
	  MethodCall.Shutdown.

2009-11-19  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerAdaptor.cs:
	* SoftDebuggerSession.cs:
	* SoftEvaluationContext.cs:
	* SoftDebuggerBacktrace.cs: Track api changes. Moved some code
	  to Mono.Debugging.
